--- a/app/src/main/res/layout/listview_role_play.xml
+++ b/app/src/main/res/layout/listview_role_play.xml
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="250dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
@@ -43,8 +43,10 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
 
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/event_unpress_record_button"
@@ -56,10 +58,7 @@
     <Button
         android:id="@+id/btn_send"
         android:layout_width="80dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_height="30dp"
         android:background="#00ff0000"
         android:fontFamily="@font/bmdohyeon"
         android:text="전송하기"
