--- a/app/src/main/res/layout/main_list.xml
+++ b/app/src/main/res/layout/main_list.xml
@@ -21,10 +21,10 @@
 
         <ImageView
             android:id="@+id/RoomKind"
-            android:layout_width="60dp"
+            android:layout_width="65dp"
             android:layout_height="25dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="11dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,43 +34,65 @@
             android:id="@+id/On"
             android:layout_width="50dp"
             android:layout_height="12dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            app:layout_constraintBottom_toBottomOf="@+id/RoomKind"
-            app:layout_constraintStart_toEndOf="@+id/RoomKind"
-            app:layout_constraintTop_toTopOf="@+id/RoomKind"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/on" />
 
         <TextView
             android:id="@+id/ScriptKind"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="18dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="23dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
             android:fontFamily="@font/bmdohyeon"
-            android:gravity="right"
+            android:gravity="left"
             android:textColor="#A0A0A0"
             android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView6"
+            app:layout_constraintTop_toBottomOf="@+id/title_text" />
 
         <TextView
             android:id="@+id/title_text"
-            android:layout_width="200dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="14dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:fontFamily="@font/bmdohyeon"
-            android:textColor="#A0A0A0"
-            android:textSize="14sp"
+            android:gravity="left"
+            android:textColor="#000000"
+            android:textSize="13sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/On"
+            app:layout_constraintStart_toEndOf="@+id/RoomKind"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginEnd="323dp"
+            android:layout_marginRight="323dp"
+            android:fontFamily="@font/bmdohyeon"
+            android:text="[대본]"
+            android:textColor="#A0A0A0"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/ScriptKind"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/ScriptKind" />
 
     </android.support.constraint.ConstraintLayout>
 
