--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -26,24 +26,6 @@
 
     </LinearLayout>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="70dp"
-            android:layout_height="25dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/custom_button"
-            android:fontFamily="@font/bmdohyeon"
-            android:text="로그아웃"
-            android:textColor="@color/white" />
-
-    </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="25dp"
@@ -54,13 +36,11 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:layout_marginRight="5dp"
-            android:text="Name"
             android:fontFamily="@font/bmdohyeon"
-            android:textColor="@color/white"
-            android:gravity="right"
-            />
+            android:gravity="left"
+            android:text="Name"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView"
@@ -69,6 +49,23 @@
             android:fontFamily="@font/bmdohyeon"
             android:textColor="@color/white"
             android:text="님 반갑습니다." />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="70dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/custom_button"
+            android:fontFamily="@font/bmdohyeon"
+            android:text="로그아웃"
+            android:textColor="@color/white" />
+
     </LinearLayout>
 
     <LinearLayout
