--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tv_room_title"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
