--- a/app/src/main/res/layout/activity_free.xml
+++ b/app/src/main/res/layout/activity_free.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tv_room_title"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -112,24 +112,6 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView4">
 
     </ScrollView>
-
-    <TextView
-        android:id="@+id/tv_script"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textColor="#A0A0A0"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/scrollView2"
-        app:layout_constraintTop_toTopOf="@+id/scrollView2" />
 
     <ListView
         android:id="@+id/lv_event"
