ReConstruct Server Code ( RxJava2 + Retrofit2 + OkHttp3)

--- a/app/src/main/res/layout/activity_askscript.xml
+++ b/app/src/main/res/layout/activity_askscript.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
     <EditText
-        android:id="@+id/tv_title"
+        android:id="@+id/edt_title"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
