--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -28,36 +28,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_logout"
-            android:layout_width="70dp"
-            android:layout_height="25dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/custom_button"
-            android:fontFamily="@font/bmdohyeon"
-            android:text="로그아웃"
-            android:textColor="@color/white" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="25dp"
         android:layout_marginLeft="16dp"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
-            android:fontFamily="@font/bmdohyeon"
-            android:gravity="left"
-            android:text="Name"
-            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView"
@@ -65,7 +38,24 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/bmdohyeon"
             android:textColor="@color/white"
-            android:text="님 반갑습니다." />
+            android:text="안녕하세요. 반갑습니다!" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="70dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/custom_button"
+            android:fontFamily="@font/bmdohyeon"
+            android:text="로그아웃"
+            android:textColor="@color/white" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -87,9 +77,9 @@
         android:orientation="vertical">
 
         <ListView
+            android:id="@+id/lv_nav"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/Nav_ListView"
             >
 
         </ListView>
