--- a/app/src/main/res/layout/activity_list_or_create.xml
+++ b/app/src/main/res/layout/activity_list_or_create.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity"
+    tools:context=".main.MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/LOC"
+    android:id="@+id/dy_list_or_create"
     >
 
     <LinearLayout
@@ -22,7 +22,7 @@
             >
 
             <Button
-                android:id="@+id/NavLOC"
+                android:id="@+id/btn_nav"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -41,7 +41,7 @@
             >
 
             <Button
-                android:id="@+id/CreateRoom"
+                android:id="@+id/btn_createRoom"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -54,7 +54,7 @@
                 android:text="방 만들기" />
 
             <Button
-                android:id="@+id/ViewRoomList"
+                android:id="@+id/btn_roomList"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -70,7 +70,7 @@
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/Nav"
+        android:id="@+id/nv_listOrCireate"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/white"
@@ -80,7 +80,7 @@
         >
 
         <include
-            android:id="@+id/NavBody"
+            android:id="@+id/navBody"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             layout = "@layout/header"
