--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:background="@color/BrGray"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    tools:context=".main.MainActivity">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,7 +57,7 @@
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/Nav"
+        android:id="@+id/nv_listOrCireate"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/white"
@@ -66,7 +67,7 @@
         >
 
         <include
-            android:id="@+id/NavBody"
+            android:id="@+id/navBody"
             layout="@layout/header"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
