--- a/app/src/main/res/layout/pop_makeroom.xml
+++ b/app/src/main/res/layout/pop_makeroom.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/pop_bg">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_makeRoom"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
@@ -23,16 +23,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/rg_roomType"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toBottomOf="@+id/tv_makeRoom">
 
         <RadioButton
-            android:id="@+id/MissionRoom"
+            android:id="@+id/rb_mission"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_marginEnd="8dp"
@@ -44,19 +44,19 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <RadioButton
-            android:id="@+id/SituationRoom"
+            android:id="@+id/rb_situation"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:fontFamily="@font/bmdohyeon"
             android:text="상황극"
             android:textSize="14sp"
-            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+            app:layout_constraintEnd_toStartOf="@+id/rg_roomType"
             app:layout_constraintStart_toStartOf="parent" />
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tv_roomName"
         android:layout_width="70dp"
         android:layout_height="35dp"
         android:layout_marginEnd="250dp"
@@ -67,13 +67,13 @@
         android:text="방 이름"
         android:textColor="@color/white"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/RoomName"
+        app:layout_constraintBottom_toBottomOf="@+id/edt_roomName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/RoomName" />
+        app:layout_constraintTop_toTopOf="@+id/edt_roomName" />
 
     <EditText
-        android:id="@+id/RoomName"
+        android:id="@+id/edt_roomName"
         android:layout_width="230dp"
         android:layout_height="35dp"
         android:layout_marginStart="5dp"
@@ -84,11 +84,11 @@
         android:paddingLeft="10dp"
         android:textColor="#A0A0A0"
         android:textSize="13sp"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintStart_toEndOf="@+id/tv_roomName"
+        app:layout_constraintTop_toBottomOf="@+id/rg_roomType" />
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/cy_mission"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="140dp"
@@ -138,7 +138,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
         <Spinner
-            android:id="@+id/PlayScript"
+            android:id="@+id/sp_playScript"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="10dp"
@@ -152,7 +152,7 @@
     </android.support.constraint.ConstraintLayout>
 
     <Button
-        android:id="@+id/Cancle"
+        android:id="@+id/btn_cancle"
         android:layout_width="60dp"
         android:layout_height="30dp"
         android:layout_marginEnd="100dp"
@@ -169,7 +169,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/Submit"
+        android:id="@+id/btn_submit"
         android:layout_width="60dp"
         android:layout_height="30dp"
         android:layout_marginStart="100dp"
