--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_drawer"
+    android:id="@+id/dy_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/BrGray"
@@ -28,7 +28,7 @@
                 android:layout_height="50dp">
 
                 <Button
-                    android:id="@+id/NavMain"
+                    android:id="@+id/btn_nav"
                     android:layout_width="34dp"
                     android:layout_height="30dp"
                     android:layout_margin="5dp"
@@ -52,7 +52,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/main_list"
+            android:id="@+id/lv_main"
             />
     </LinearLayout>
 
