--- a/app/src/main/res/layout/activity_vople_admin_event.xml
+++ b/app/src/main/res/layout/activity_vople_admin_event.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/main_drawer"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -53,22 +52,5 @@
             />
     </LinearLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nv_listOrCireate"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        app:itemTextColor="@color/DG"
-        app:itemIconTint="@color/DG"
-        android:layout_gravity="start"
-        >
 
-        <include
-            android:id="@+id/navBody"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            layout = "@layout/header"
-            />
-    </android.support.design.widget.NavigationView>
-
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
